--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-torch 
-torchvision 
-torchaudio 
+torch --index-url https://download.pytorch.org/whl/cu118
+torchvision --index-url https://download.pytorch.org/whl/cu118
+torchaudio --index-url https://download.pytorch.org/whl/cu118
 torchlibrosa
